--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
     />
     <title>En proceso de desarrollo... 🚧</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
