fix: Corregir renderizado de categorías y actualizar UI

--- a/index.html
+++ b/index.html
@@ -4,11 +4,38 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="./src/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>En proceso de desarrollo... 🚧</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Orbitron:wght@400;500;600;700&family=Exo+2:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
+
+    <title>ClickStock | Tu Tienda de Tecnología e Innovación</title>
+
+    <meta
+      name="description"
+      content="Descubre en ClickStock las mejores ofertas en tecnología. Stock actualizado, envíos rápidos y garantía asegurada."
     />
+
+    <meta
+      name="keywords"
+      content="tecnología, ecommerce, hardware, stock, clickstock, compras online"
+    />
+
+    <meta name="author" content="ClickStock Team" />
+    <meta name="robots" content="index, follow" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.clickstock.com/" />
+    <meta
+      property="og:title"
+      content="ClickStock | Tecnología al alcance de un clic"
+    />
+    <meta
+      property="og:description"
+      content="Encuentra lo último en tech con el mejor stock del mercado."
+    />
+    <meta
+      property="og:image"
+      content="https://www.clickstock.com/og-image.jpg"
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="ClickStock 🚀" />
   </head>
   <body>
     <div id="root"></div>
