Hotfixes: -Optimizacion de Modal para crear pedidos -Uso de React.lazy para consultas vagas -Uso de fuentes personalizadas y actualizacion de flaticon -Se agrega campo en payment check para interaccion POST de pedidos del usuario (experimental) -Fix de tamaño de fuente en contador

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./src/assets/favicon.png" />
+    <link rel="icon" type="image/png" href="https://i.imgur.com/gz0HjFo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>ClickStock | Tu Tienda de Tecnología e Innovación</title>
@@ -36,6 +36,12 @@
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="ClickStock 🚀" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&family=Orbitron:wght@400..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
